--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -17,5 +17,8 @@
   - boto3
   - botocore
 
+#- name: setp root password
+#  ansible.builtin.command: mysql_secure_installation --set-root-pass RoboShop@1
+
 - name: setp root password
-  ansible.builtin.command: mysql_secure_installation --set-root-pass RoboShop@1
+  ansible.builtin.command: mysql_secure_installation --set-root-pass {{ MYSQL_ROOT_PASSWORD }}
