--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -21,7 +21,7 @@
       state: present
 
   - name: check products loaded or not
-    ansible.builtin.command: mongosh --host mongodb.daws84s.space --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
+    ansible.builtin.command: mongosh --host mongodb-dev.thupakula.space --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
     register: catalogue_output
 
   - name: print catalogue output
@@ -29,7 +29,7 @@
       msg: "{{ catalogue_output }}"
 
   - name: load products
-    ansible.builtin.shell: mongosh --host mongodb.daws84s.space < /app/db/master-data.js
+    ansible.builtin.shell: mongosh --host mongodb-dev.thupakula.space < /app/db/master-data.js
     when: catalogue_output.stdout | int < 0
   
 
