--- a/roles/user/vars/main.yaml
+++ b/roles/user/vars/main.yaml
@@ -1,2 +1,2 @@
-REDIS_HOSTS: redis.daws84s.space
-USER_HOSTS: user.daws84s.space
+REDIS_HOSTS: redis-{{ env }}.thupakula.space
+USER_HOSTS: user-{{ env }}.thupakula.space
