--- a/main.yaml
+++ b/main.yaml
@@ -1,7 +1,7 @@
 - name: "configure  {{ component }}"
   become: yes
-  hosts:  "{{ component }}"
-  #hosts:  localhost
-  #connection: local
+  #hosts:  "{{ component }}"
+  hosts:  localhost
+  connection: local
   roles:  # this will automatically load a folder called in current working direcory 
   - "{{ component }}"
